--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,8 @@
 @import './base/settings.scss';
 @import './components/header';
 @import './components/container';
+@import './components/dashboard';
+@import './components/blogList';
+@import './components/content';
+@import './components/form';
+@import './components/card';
